Minor changes to html, added all of the styling to the header and the first part of the webpage.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="doorpass.png" alt="DoorPass Logo">
+        <div class="header-text">Header Logo</div>
         <ul class="header-links">
             <li><a href="#">Header Link One</a></li>
             <li><a href="#">Header Link Two</a></li>
