--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="three">
-        <div class="three-paragraph">This is an inspiring quote or a testomonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="three-quote">This is an inspiring quote or a testomonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="three-thor">-Thor, God of Thunder</div>
     </div>
 
