Added images to html file.

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         </div>
         <div class="two-cards">
             <div class="two-card-one">
-                <img src="" alt="Image One">
-                <div class="text">This is some subtext under an image.</div>
+                <img src="./images/barberry.png" alt="barberry">
+                <div class="text">This is some subtext under an illustration or image.</div>
             </div>
             <div class="two-card-two">
-                <img src="" alt="Image Two">
-                <div class="text">This is some subtext under an image.</div>
+                <img src="./images/chilli.png" alt="chili">
+                <div class="text">This is some subtext under an illustration or image.</div>
             </div>
             <div class="two-card-three">
-                <img src="" alt="Image Three">
-                <div class="text">This is some subtext under an image.</div>
+                <img src="./images/pepper.png" alt="pepper">"
+                <div class="text">This is some subtext under an illustration or image.</div>
             </div>
             <div class="two-card-four">
-                <img src="" alt="Image Four">
-                <div class="text">This is some subtext under an image.</div>
+                <img src="./images/saffron.png" alt="saffron">
+                <div class="text">This is some subtext under an illustration or image.</div>
             </div>
         </div>
     </div>
