Made some minor html adustments. Finalized all styling.

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
 
     <div class="two">
         <div class="two-header">
-            <div class="text">Some random information.</div>
+            <div class="two-header-text">Some random information.</div>
         </div>
-        <div class="two-cards">
-            <div class="two-card-one">
+        <div class="two-body">
+            <div class="two-card">
                 <img src="./images/barberry.png" alt="barberry">
                 <div class="text">This is some subtext under an illustration or image.</div>
             </div>
-            <div class="two-card-two">
+            <div class="two-card">
                 <img src="./images/chilli.png" alt="chili">
                 <div class="text">This is some subtext under an illustration or image.</div>
             </div>
-            <div class="two-card-three">
-                <img src="./images/pepper.png" alt="pepper">"
+            <div class="two-card">
+                <img src="./images/pepper.png" alt="pepper">
                 <div class="text">This is some subtext under an illustration or image.</div>
             </div>
-            <div class="two-card-four">
+            <div class="two-card">
                 <img src="./images/saffron.png" alt="saffron">
                 <div class="text">This is some subtext under an illustration or image.</div>
             </div>
